--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
  
 <div class="container" ng-app="app">
  
-    <h3 style="color:blue"> My Awesome Spring Boot App Running on EKS Cluster, Today is November 22st, 2022!! </h3>
+    <h3 style="color:blue"> Welcome to the demo of gitlab!! </h3>
     
     <div ng-controller="postcontroller">
         <form class="form-horizontal" name="customerForm" ng-submit="submitForm()">
